# rust-ternaries

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
ternary_statement_macro/: Cargo.toml
ternary_statement_macro/src/: lib.rs
ternary_statement_truthability/: Cargo.toml
ternary_statement_truthability/src/: lib.rs
