[package]
name = "ternary-statement"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ternary-statement-macro = {path = "./ternary_statement_macro"}
ternary-statement-truthability = { path = "./ternary_statement_truthability"}
